--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.project-font {
+    font-family: 'Montserrat';
+}
+
+.video {
+    z-index: -1;
+}
