Логотип и кнопки тест1

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,2 +1,2 @@
 <app-header></app-header>
-<h1 class = "project-font font-bold mb-2 text-center text-lg"> {{ title | titlecase }} </h1>
+<!-- <h1 class = "project-font font-bold mb-2 text-center text-lg"> {{ title | titlecase }} </h1> -->
