--- a/src/app/components/site/header/header.component.html
+++ b/src/app/components/site/header/header.component.html
@@ -1,3 +1,16 @@
-<div class="h-1/2 overflow-hidden absolute top-0 left-0">
-    <video class="w-screen" src="/assets/img/video.mp4" autoplay loop> </video>
+<div id="head">
+  <video id="videoHead" src="/assets/img/video.mp4" autoplay loop muted></video>
+  <div id="content">
+    <img src="/assets/img/logoDrupal.png" alt="Логотип">
+    <button>Поддержка сайтов</button>
+    <button>Тарифы</button>
+    <button>Наши работы</button>
+    <button>Отзывы</button>
+    <button>Контакты</button>
+    <button id="number">8 800 222-26-73</button>
+    <button id="lang">RU</button>
+    <svg xmlns="http://www.w3.org/2000/svg" width="9" height="6" viewBox="0 0 9 6" fill="none" id="str">
+      <path opacity="0.24" d="M1 1L4.5 4.5L8 1" stroke="white" stroke-width="2"/>
+    </svg>
+  </div>
 </div>
