половина с большой натяжкой header'a

--- a/src/app/components/site/header/header.component.html
+++ b/src/app/components/site/header/header.component.html
@@ -1,16 +1,25 @@
 <div id="head">
   <video id="videoHead" src="/assets/img/video.mp4" autoplay loop muted></video>
   <div id="content">
-    <img src="/assets/img/drupal-coder.svg" alt="Логотип">
-    <button>Поддержка сайтов</button>
-    <button>Тарифы</button>
-    <button>Наши работы</button>
-    <button>Отзывы</button>
-    <button>Контакты</button>
+    <img src="/assets/img/drupal-coder.svg" alt="Логотип" id="logo">
+    <button>ПОДДЕРЖКА САЙТОВ</button>
+    <button>ТАРИФЫ</button>
+    <button>НАШИ РАБОТЫ</button>
+    <button>ОТЗЫВЫ</button> 
+    <button>КОНТАКТЫ</button>
     <button id="number">8 800 222-26-73</button>
     <button id="lang">RU</button>
-    <svg xmlns="http://www.w3.org/2000/svg" width="9" height="6" viewBox="0 0 9 6" fill="none" id="str">
-      <path opacity="0.24" d="M1 1L4.5 4.5L8 1" stroke="white" stroke-width="2"/>
-    </svg>
+    <img src="/assets/img/arrow-lang.svg" alt="Стрелочка" id="str">
+  </div>
+
+  <div id="container">
+    <div id="first-column">
+      <p id="p1Col">Поддержка <br> сайтов на Drupal</p>
+      <p id="p2Col">Сопровождение и поддержка сайтов <br> на CMS Drupal любых версий и запущенности</p>
+    </div>
+
+    <div id="second-column">
+      <p>Drupal-разработчик в России по версии Рейтинга Рунета</p>
+    </div>
   </div>
 </div>
