--- a/src/app/components/site/header/header.component.css
+++ b/src/app/components/site/header/header.component.css
@@ -23,7 +23,7 @@
     z-index: 1;
   }
 
-  #content img {
+  #logo {
     width: 136.989px;
     height: 19.244px;
     flex-shrink: 0;
@@ -55,6 +55,7 @@
     font-weight: 500;
     line-height: 14px; 
   }
+
   #lang{
     margin-left: 38px;
     color: #FFF;
@@ -64,6 +65,7 @@
     font-weight: 700;
     line-height: 14px; /* 100% */
   }
+
   #str {
     stroke-width: 2px;
     stroke: var(--White, #FFF);
@@ -74,3 +76,42 @@
     margin-top:42px;
     margin-right: 131px;
   }
+  
+  #container {
+    column-count: 2;
+    column-gap: 97px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+  }
+  
+  #container {
+    color: #fff;
+  }
+
+  #p1Col {
+    color: var(--White, #FFF);
+    font-family: Montserrat;
+    font-size: 52px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 60px; /* 115.385% */
+  }
+
+  #p2Col {
+    color: var(--White, #FFF);
+    font-family: Montserrat;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 28px; /* 155.556% */
+    margin-top: 15px;
+  }
+  
+
