--- a/src/app/components/site/header/header.component.html
+++ b/src/app/components/site/header/header.component.html
@@ -14,12 +14,23 @@
 
   <div id="container">
     <div id="first-column">
-      <p id="p1Col">Поддержка <br> сайтов на Drupal</p>
-      <p id="p2Col">Сопровождение и поддержка сайтов <br> на CMS Drupal любых версий и запущенности</p>
+      <h1 id="page-title">Поддержка <br> сайтов на Drupal</h1>
+      <div id="support-main-description">
+        Сопровождение и поддержка сайтов <br> на CMS Drupal любых версий и запущенности
+      </div>
+      <button id="block-main-wrapper">ТАРИФЫ</button>
     </div>
 
-    <div id="second-column">
-      <p>Drupal-разработчик в России по версии Рейтинга Рунета</p>
-    </div>
+    <!-- <div id="second-column">
+
+      <div id="one-place">
+        <h1 id="support-achievement-title">
+          #1 <img alt="1 place" src="/assets/img/cup.png">
+        </h1>
+        <div >Drupal-разработчик
+          в России по версии Рейтинга Рунета</div>
+      </div> -->
+<!-- как-то криво получается. надо подумать -->
   </div>
+
 </div>
