--- a/src/app/components/site/header/drupal-desc.component.html
+++ b/src/app/components/site/header/drupal-desc.component.html
@@ -17,6 +17,6 @@
           </div>
         </div>
       </div>
-      <div id="desc-text">{{ innerText }}</div>
+      <div id="desc-text" [innerHTML]="innerText"></div>
     </div>
   </div>
