--- a/src/app/components/site/header/head-button.component.html
+++ b/src/app/components/site/header/head-button.component.html
@@ -1,4 +1,4 @@
-<button (mouseenter)="onMouseOver()" class="mx-3">
+<button (mouseenter)="onMouseOver()" [class]="getClassList()">
   {{ innerText }}
   <svg class='line-image' preserveAspectRatio='none' [ngStyle]="{ 'width.px': svgWidth }" height="3" viewBox="0 0 140 3" fill="none" xmlns="http://www.w3.org/2000/svg">
     <line y1="1.5" x2="140" y2="1.5" stroke="#F14D34" stroke-width="3"/>
