--- a/src/app/components/site/header/header.component.html
+++ b/src/app/components/site/header/header.component.html
@@ -3,16 +3,13 @@
   <div class="h-32">
     <div id="content">
       <img src="/assets/img/drupal-coder.svg" alt="Логотип" id="logo">
-      <div class="mx-12">
-        <head-button innerText="ПОДДЕРЖКА САЙТОВ"></head-button>
-        <head-button innerText="ТАРИФЫ"></head-button>
-        <head-button innerText="НАШИ РАБОТЫ"></head-button>
-        <head-button innerText="ОТЗЫВЫ"></head-button>
-        <head-button innerText="КОНТАКТЫ"></head-button>
-        <head-button id="number" innerText="8 800 222-26-73"></head-button>
-        <head-button id="lang" innerText="RU"></head-button>
-        <img src="/assets/img/arrow-lang.svg" alt="Стрелочка" id="str">
-      </div>
+      <head-button innerText="ПОДДЕРЖКА САЙТОВ"></head-button>
+      <head-button innerText="ТАРИФЫ"></head-button>
+      <head-button innerText="НАШИ РАБОТЫ"></head-button>
+      <head-button innerText="ОТЗЫВЫ"></head-button>
+      <head-button innerText="КОНТАКТЫ"></head-button>
+      <head-button id="number" innerText="8 800 222-26-73" textClass="button-d2"></head-button>
+      <head-button id="lang" innerText="RU" textClass="button-d2" [isMenu]=true></head-button>
     </div>
   </div>
   
@@ -22,30 +19,30 @@
       <div id="support-main-description">
         Сопровождение и поддержка сайтов <br> на CMS Drupal любых версий и запущенности
       </div>
-      <button id="block-main-wrapper">ТАРИФЫ</button>
+      <button>ТАРИФЫ</button>
     </div>
     <div class="w-1/2">
       <div class="flex">
         <div class="w-1/4">
-          <drupal-desc titleClass="one-place" titleText="#1" titleImgLink="/assets/img/cup.png" innerText="Drupal-разработчик в России по версии Рейтинга Рунета"></drupal-desc>
+          <drupal-desc titleClass="one-place" titleText="#1" titleImgLink="/assets/img/cup.png" innerText="Drupal-разработчик <br> в России по версии <br> Рейтинга Рунета"></drupal-desc>
         </div>
         <div class="w-1/4">
-          <drupal-desc titleClass="common" titleText="3+" innerText="средний опыт специалистов более 3 лет"></drupal-desc>
+          <drupal-desc titleClass="common" titleText="3+" innerText="средний опыт <br> специалистов более <br> 3 лет"></drupal-desc>
         </div>
         <div class="w-1/4">
-          <drupal-desc titleClass="common" titleText="14" innerText="лет опыта в сфере Drupal"></drupal-desc>
+          <drupal-desc titleClass="common" titleText="14" innerText="лет опыта в сфере <br> Drupal"></drupal-desc>
         </div>
       </div>
 
       <div class="flex">
         <div class="w-1/4">
-          <drupal-desc titleClass="common" titleText="200+" innerText="модулей и тем в формате DrupalGive"></drupal-desc>
+          <drupal-desc titleClass="common" titleText="200+" innerText="модулей и тем <br> в формате DrupalGive"></drupal-desc>
         </div>
         <div class="w-1/4">
-          <drupal-desc titleClass="common" titleText="35 000" innerText="часов поддержки сайтов на Drupal"></drupal-desc>
+          <drupal-desc titleClass="common" titleText="35 000" innerText="часов поддержки <br> сайтов на Drupal"></drupal-desc>
         </div>
         <div class="w-1/4">
-          <drupal-desc titleClass="common" titleText="200+" innerText="Проектов на поддержке"></drupal-desc>
+          <drupal-desc titleClass="common" titleText="200+" innerText="Проектов <br> на поддержке"></drupal-desc>
         </div>
       </div>
     </div>
