--- a/src/app/components/site/header/header.component.css
+++ b/src/app/components/site/header/header.component.css
@@ -1,22 +1,10 @@
-  #head {
+  #block1 {
     position: relative;
     overflow: hidden;
-    width: 100%;
-  }
-
-  #videoHead {
-    width: 100%;
-    height: 82.5%;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
+    height: 650px;
   }
 
   #content {
-    position: absolute; 
-    top: 0; 
-    left: 0;
     display: flex;
     align-items: center;
     z-index: 1;
@@ -58,26 +46,6 @@
     height: 7px;
     flex-shrink: 0;
   }
-  
-  #container {
-    width: 506px;
-    margin-left: 5px;
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    z-index: 0;
-  }
-  
-  .container {
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-}
 
   #container {
     color: #fff;
