--- a/src/app/components/site/cases/imgs/cases-im-medium.component.html
+++ b/src/app/components/site/cases/imgs/cases-im-medium.component.html
@@ -1,9 +1,11 @@
-<div id="imblock">
-    <img [src]="ImgLink" id="inner-img" alt="Image">
-    <div class="flex justify-center">
-        <div class="relative z-10">
-            <div id="title"> {{ title }} </div>
-            <div id="date"> {{ date }} </div>
+<a [href]="link">
+    <div id="imblock">
+        <img [src]="ImgLink" id="inner-img" alt="Image">
+        <div class="flex justify-center">
+            <div class="relative z-10">
+                <div id="title"> {{ title }} </div>
+                <div id="date"> {{ date }} </div>
+            </div>
         </div>
     </div>
-</div>
+</a>
