--- a/src/app/components/site/faq/faq-stroke.component.html
+++ b/src/app/components/site/faq/faq-stroke.component.html
@@ -1,4 +1,4 @@
 <div id="title" class="flex">
     <div id="number" [innerHTML]="getNumber()"></div>
-    {{ title }}
+    <div [innerHTML]="title"></div>
 </div>
