--- a/src/app/components/site/faq/faq.component.html
+++ b/src/app/components/site/faq/faq.component.html
@@ -9,17 +9,17 @@
                     <faq-stroke-main [num]=1 title="Кто непосредственно занимается поддержкой?" description="Сайты поддерживают штатные сотрудники ООО ''Инитлаб'', г. Краснодар, прошедшие специальное обучение и имеющие опыт работы с Друпал от 4 до 15 лет: 8 web-разработчиков, 2 специалиста по SEO, 4 системных администратора."></faq-stroke-main>
                 </div>
             </div>
-            <faq-stroke [num]=2 title="Как организована работа поддержки?"></faq-stroke>
-            <faq-stroke [num]=3 title="Что происходит, когда отработаны все предоплаченные часы за месяц?"></faq-stroke>
-            <faq-stroke [num]=4 title="Что происходит, когда не отработаны все предоплаченные часы за месяц?"></faq-stroke>
-            <faq-stroke [num]=5 title="Как происходит оценка и согласование планируемого времени на выполнение заявок?"></faq-stroke>
-            <faq-stroke [num]=6 title="Сколько программистов выделяется на проект?"></faq-stroke>
-            <faq-stroke [num]=7 title="Как подать заявку на внесение изменений на сайте?"></faq-stroke>
-            <faq-stroke [num]=8 title="Как подать заявку на добавление пользователя, изменение настроек веб-сервера и других задач по администрированию?"></faq-stroke>
-            <faq-stroke [num]=9 title="В течение какого времени начинается работа по заявке?"></faq-stroke>
-            <faq-stroke [num]=10 title="В какое время работает поддержка?"></faq-stroke>
-            <faq-stroke [num]=11 title="Подходят ли услуги поддержки, если необходимо произвести обновление ядра Drupal или модулей?"></faq-stroke>
-            <faq-stroke [num]=12 title="Можно ли пообщаться со специалистом голосом или в мессенджере?"></faq-stroke>
+            <faq-stroke [num]=2 title="<a href='/'>Как организована работа поддержки?</a>"></faq-stroke>
+            <faq-stroke [num]=3 title="<a href='/'>Что происходит, когда отработаны все предоплаченные часы за месяц?</a>"></faq-stroke>
+            <faq-stroke [num]=4 title="<a href='/'>Что происходит, когда не отработаны все предоплаченные часы за месяц?</a>"></faq-stroke>
+            <faq-stroke [num]=5 title="<a href='/'>Как происходит оценка и согласование планируемого времени на выполнение заявок?</a>"></faq-stroke>
+            <faq-stroke [num]=6 title="<a href='/'>Сколько программистов выделяется на проект?</a>"></faq-stroke>
+            <faq-stroke [num]=7 title="<a href='/'>Как подать заявку на внесение изменений на сайте?</a>"></faq-stroke>
+            <faq-stroke [num]=8 title="<a href='/'>Как подать заявку на добавление пользователя, изменение настроек веб-сервера и других задач по администрированию?</a>"></faq-stroke>
+            <faq-stroke [num]=9 title="<a href='/'>В течение какого времени начинается работа по заявке?</a>"></faq-stroke>
+            <faq-stroke [num]=10 title="<a href='/'>В какое время работает поддержка?</a>"></faq-stroke>
+            <faq-stroke [num]=11 title="<a href='/'>Подходят ли услуги поддержки, если необходимо произвести обновление ядра Drupal или модулей?</a>"></faq-stroke>
+            <faq-stroke [num]=12 title="<a href='/'>Можно ли пообщаться со специалистом голосом или в мессенджере?</a>"></faq-stroke>
         </div>
     </div>
 </div>
