--- a/src/app/components/site/footer/footer.component.html
+++ b/src/app/components/site/footer/footer.component.html
@@ -32,7 +32,7 @@
                           </clipPath>
                         </defs>
                       </svg>
-                      <div id="mail">info@drupal-coder.ru</div>
+                      <div id="mail">info&#64;drupal-coder.ru</div>
                 </div>
               </div>
 
