--- a/src/app/components/site/info/info-desc.component.html
+++ b/src/app/components/site/info/info-desc.component.html
@@ -1,9 +1,9 @@
 <div class="desc-block flex flex-col">
-    <div class="w-1/2">
+    <div >
         <img src="/assets/img/icon-bg.svg" alt="Логотип" class="icon-b">
         <img [src]="ImgLink" alt="Логотип" class="icon-m">
     </div>
-    <div class="w-1/2">
+    <div >
         <div class="desc-text"> {{innerText}} </div>
     </div>
 </div>
