--- a/src/app/components/site/info/info.component.html
+++ b/src/app/components/site/info/info.component.html
@@ -4,13 +4,11 @@
       13  лет совершенствуем компетенции в Drupal поддержке!
       <div id="main_desc">Разрабатываем и оптимизируем модули, расширяем функциональность сайтов, обновляем дизайн</div>
     </div>
-    <div class="flex">
+    <div class="grid grid-cols-2 md:grid-cols-4 2xl:gap-8">
       <block-desc ImgLink="/assets/img/1.svg" innerText="Добавление информации на сайт, создание новых разделов"></block-desc>
       <block-desc ImgLink="/assets/img/2.svg" innerText="Разработка и оптимизация модулей сайта"></block-desc>
       <block-desc ImgLink="/assets/img/3.svg" innerText="Интеграция с CRM, 1C, платежными системами, любыми веб-сервисами"></block-desc>
       <block-desc ImgLink="/assets/img/4.svg" innerText="Любые доработки функционала и дизайна"></block-desc>
-    </div>
-    <div class="flex">
       <block-desc ImgLink="/assets/img/5.svg" innerText="Аудит и мониторинг безопасности Drupal сайтов"></block-desc>
       <block-desc ImgLink="/assets/img/6.svg" innerText="Миграция, импорт контента и апгрейд Drupal"></block-desc>
       <block-desc ImgLink="/assets/img/7.svg" innerText="Оптимизацияи ускорение Drupal-сайтов"></block-desc>
