--- a/src/app/components/site/info/info-desc.component.html
+++ b/src/app/components/site/info/info-desc.component.html
@@ -1,5 +1,5 @@
 <div class="desc-block flex flex-col">
-    <div >
+    <div id="pics">
         <img src="/assets/img/icon-bg.svg" alt="Логотип" class="icon-b">
         <img [src]="ImgLink" alt="Логотип" class="icon-m">
     </div>
