--- a/src/app/components/site/support/support.component.css
+++ b/src/app/components/site/support/support.component.css
@@ -14,9 +14,15 @@
     color: var(--main-black, #050C33);
     text-align: center;
     font-family: Montserrat;
-    font-size: 42px;
+    font-size: 24px; 
     font-style: normal;
     font-weight: 700;
     line-height: normal;
     margin-bottom: 56px;
 }
+
+@media only screen and (min-width: 600px) {
+    #title {
+        font-size: 42px; 
+    }
+  }
