--- a/src/app/components/site/support/support-block.component.html
+++ b/src/app/components/site/support/support-block.component.html
@@ -1,5 +1,7 @@
-<div [style.background-image]="getImgUrl()" id="sblock">
-    <div id="idtext"> {{ getId() }} </div>
-    <div id="titletext"> {{ titleText }} </div>
-    <div id="innertext"> {{ innerText }} </div>
+<div id="inner-block">
+    <div [style.background-image]="getImgUrl()" id="sblock">
+        <div id="idtext"> {{ getId() }} </div>
+        <div id="titletext"> {{ titleText }} </div>
+        <div id="innertext"> {{ innerText }} </div>
+    </div>
 </div>
