--- a/src/app/components/site/application/main.component.html
+++ b/src/app/components/site/application/main.component.html
@@ -10,7 +10,7 @@
     <app-support></app-support>
 </section>
 
-<!-- <section class="section_expertise">
+<section class="section_expertise">
     <app-expertise></app-expertise>
 </section>
 
@@ -46,4 +46,4 @@
     <app-footer></app-footer>
 </section>
 
-<router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
