--- a/src/app/components/site/support/support-block.component.css
+++ b/src/app/components/site/support/support-block.component.css
@@ -1,3 +1,8 @@
+#inner-block {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
 #sblock {
     width: 100%;
     height: 292px;
@@ -14,7 +19,7 @@
 }
 
 #titletext {
-    width: 232px;
+    width: 292px;
     color: var(--main-black, #050C33);
     font-family: Montserrat;
     font-size: 18px;
