--- a/src/app/components/site/header/popUp/popUp.component.css
+++ b/src/app/components/site/header/popUp/popUp.component.css
@@ -12,19 +12,35 @@
 #ghost-block {
     width: 100%;
     height: 100%;
-    background-image: url("/assets/img/D-flying.svg");
-    background-position: right top;
+    background-image: url("/assets/img/D-f2.svg");
+    background-position: right bottom;
     background-repeat: no-repeat;
 }
 
 #popup {
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
     flex-shrink: 0;
     background: linear-gradient(261deg, rgba(75, 75, 105, 0.55) -114.85%, rgba(5, 5, 20, 1) 69.04%), #394047;
     border-radius: 5px;
     border: 2px solid var(--icons-1, #5d3494);
     z-index: 100;
+}
+
+@media (min-width: 640px) {
+    #popup {
+        top: 50%;
+        left: 50%;
+        width: auto;
+        height: auto;
+        transform: translateX(-50%) translateY(-50%);
+    }
+
+    #ghost-block {
+        background-image: url("/assets/img/D-flying.svg");
+        background-position: right top;
+    }
 }
