--- a/src/app/components/site/support/support-block.component.css
+++ b/src/app/components/site/support/support-block.component.css
@@ -1,6 +1,6 @@
 #sblock {
     width: 100%;
-    height: 292px;
+    height: 222px;
     flex-shrink: 0;
     border-radius: 5px;
     background: var(--White, #FFF);
@@ -13,8 +13,13 @@
     margin-bottom: 5px;
 }
 
+#inner-block{
+    margin-right: 15px;
+    margin-left: 15px;
+}
+
 #titletext {
-    width: 232px;
+    width: 342px;
     color: var(--main-black, #050C33);
     font-family: Montserrat;
     font-size: 18px;
@@ -25,7 +30,7 @@
 }
 
 #innertext {
-    width: 233px;
+    width: 333px;
     color: var(--main-black, #050C33);
     font-family: Montserrat;
     font-size: 16px;
@@ -54,5 +59,18 @@ img {
 @media only screen and (min-width: 600px) {
     #sblock {
         height: 292px;
+    }
+
+    #inner-block{
+        margin-right: 0px;
+        margin-left: 0px;
+    }
+
+    #titletext {
+        width: 232px;
+    }
+
+    #innertext {
+        width: 233px;
     }
   }
