--- a/src/app/components/site/support/support.component.css
+++ b/src/app/components/site/support/support.component.css
@@ -18,7 +18,8 @@
 @media only screen and (min-width: 600px) {
     #title {
         font-size: 42px; 
-        width: 406px;margin-bottom: 56px;
+        width: 406px;
+        margin-bottom: 56px;
     }
 
     #blocks {
