--- a/src/app/components/site/application/main.component.html
+++ b/src/app/components/site/application/main.component.html
@@ -10,15 +10,15 @@
     <app-support></app-support>
 </section>
 
-<section class="section_expertise">
+<!-- <section class="section_expertise">
     <app-expertise></app-expertise>
-</section>
+</section> -->
 
 <section class="section_tariffs">
     <app-tariffs></app-tariffs>
 </section>
 
-<section class="section_professionals">
+<!-- <section class="section_professionals">
     <app-professionals></app-professionals>
 </section>
 
@@ -46,4 +46,4 @@
     <app-footer></app-footer>
 </section>
 
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
