--- a/src/app/components/site/header/header.component.html
+++ b/src/app/components/site/header/header.component.html
@@ -1,7 +1,7 @@
 <div id="render_head" class="absolute top-0"></div>
 <div id="block1" class="flex justify-center">
-  <div class="2xl:mx-24 2xl:my-8">
-    <div class="2xl:h-32">
+  <div class="lg:mx-24 lg:my-8">
+    <div class="lg:h-32">
       <div id="content" class="flex items-center">
         <img src="/assets/img/drupal-coder.svg" alt="Логотип" id="logo" class="w-auto h-8 mr-4">
         <head-button link=".section_support" innerText="ПОДДЕРЖКА DRUPAL"></head-button>
@@ -27,7 +27,7 @@
         <button (click)="showPopUp()" class="mt-8 px-4 py-2 border-2 border-icons-1 rounded">СВЯЗЬ С НАМИ</button>
       </div>
 
-      <div class="grid grid-cols-2 md:grid-cols-3 2xl:gap-8 gap-x-[25%] 2xl:ml-[200px]">
+      <div class="grid grid-cols-2 md:grid-cols-3 lg:gap-8 gap-x-[25%] lg:ml-[200px]">
         <div class="h-32 mb-2">
           <drupal-desc titleClass="one-place" titleText="#1" titleImgLink="/assets/img/cup.png" innerText="Drupal-разработчик <br> в России по версии <br> Рейтинга Рунета"></drupal-desc>
         </div>
