--- a/src/app/components/site/info/info.component.html
+++ b/src/app/components/site/info/info.component.html
@@ -4,7 +4,7 @@
       13  лет совершенствуем компетенции в Drupal поддержке!
       <div id="main_desc">Разрабатываем и оптимизируем модули, расширяем функциональность сайтов, обновляем дизайн</div>
     </div>
-    <div class="grid grid-cols-2 md:grid-cols-4 2xl:gap-8">
+    <div class="grid grid-cols-2 md:grid-cols-4 lg:gap-8">
       <block-desc ImgLink="/assets/img/1.svg" innerText="Добавление информации на сайт, создание новых разделов"></block-desc>
       <block-desc ImgLink="/assets/img/2.svg" innerText="Разработка и оптимизация модулей сайта"></block-desc>
       <block-desc ImgLink="/assets/img/3.svg" innerText="Интеграция с CRM, 1C, платежными системами, любыми веб-сервисами"></block-desc>
