--- a/src/app/components/site/support/support.component.html
+++ b/src/app/components/site/support/support.component.html
@@ -3,13 +3,13 @@
         <h2 id="title">Поддержка от Drupal-coder</h2>
     </div>
     <div id="blocks">
-        <div class="2xl:flex">
+        <div class="lg:flex">
             <support-block ImgLink="/assets/img/support1.svg" [innerId]=1 titleText="Постановка задачи по Email" innerText="Удобная и привычная модель постановки задач, при которой задачи фиксируются и никогда не теряются."></support-block>
             <support-block ImgLink="/assets/img/pie-chart.svg" [innerId]=2 titleText="Система Helpdesk – отчетность, прозрачность" innerText="Возможность посмотреть все заявки в работеи отработанные часы в личном кабинете через браузер."></support-block>
             <support-block ImgLink="/assets/img/settings.svg" [innerId]=3 titleText="Расширенная техническая поддержка" innerText="Возможность организации расширенной техподдержки с 6:00 до 22:00 без выходных."></support-block>
             <support-block ImgLink="/assets/img/group.svg" [innerId]=4 titleText="Персональный менеджер проекта" innerText="Ваш менеджер проекта  всегда в курсе текущего состояния проектаи в любой момент готов ответить на любые вопросы."></support-block>
         </div>
-        <div class="2xl:flex">
+        <div class="lg:flex">
             <support-block ImgLink="/assets/img/support5.svg" [innerId]=5 titleText="Удобные способы оплаты" innerText="Безналичный расчет по договору или электронные деньги: WebMoney, Яндекс.Деньги, Paypal."></support-block>
             <support-block ImgLink="/assets/img/support6.svg" [innerId]=6 titleText="Работаем с SLA и NDA" innerText="Работа в рамках соглашений о конфиденциальности и об уровне качетсва работ."></support-block>
             <support-block ImgLink="/assets/img/group2.svg" [innerId]=7 titleText="Штатные специалисты" innerText="Надежные штатные специалисты, никаких фрилансеров."></support-block>
