--- a/src/app/components/site/tariffs/tariff-block.component.css
+++ b/src/app/components/site/tariffs/tariff-block.component.css
@@ -1,5 +1,5 @@
 .tariff-block-main {
-    width: 420px;
+    width: 350px;
     height: 665px;
     flex-shrink: 0;
     border-radius: 5px;
@@ -7,14 +7,20 @@
     background: #FFF;
     box-shadow: 0px 4px 60px 0px rgba(161, 161, 161, 0.25);
     transform: translateY(-23px);
+    margin-left: 15px;
+    margin-right: 15px;
+    
 }
 
 .tariff-block {
-    width: 390px;
+    width: 350px;
     height: 619px;
     border-radius: 5px;
     border: 1px solid rgba(0, 0, 0, 0.10);
     background: #FFF;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 47px;
 }
 
 #upper {
@@ -121,4 +127,17 @@
     font-style: normal;
     font-weight: 500;
     line-height: 28px;
+}
+
+@media only screen and (min-width: 640px) {
+    .tariff-block-main {
+        width: 420px;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    .tariff-block {;
+        margin-bottom: 0px;
+    }
+    
 }
