--- a/src/app/components/site/header/header.component.css
+++ b/src/app/components/site/header/header.component.css
@@ -3,6 +3,7 @@
   overflow: hidden;
   height: 100%;
   margin-bottom: 50px;
+  width: 100%;
 }
 
 #content {
@@ -70,11 +71,7 @@
   background-color: #F14D34;
 }
 
-@media only screen and (min-width: 600px) {
-  #block1 {
-    height: 650px;
-  }
-
+@media only screen and (min-width: 640px) {
   #container {
     text-align: initial;
   }
