--- a/src/app/components/site/header/header.component.html
+++ b/src/app/components/site/header/header.component.html
@@ -1,50 +1,60 @@
-<div id="render_head" class="absolute top-0"></div>
-<div id="block1" class="flex justify-center">
-  <div class="2xl:mx-24 2xl:my-8">
-    <div class="2xl:h-32">
-      <div id="content" class="flex items-center">
-        <img src="/assets/img/drupal-coder.svg" alt="Логотип" id="logo" class="w-auto h-8 mr-4">
-        <head-button link=".section_support" innerText="ПОДДЕРЖКА DRUPAL"></head-button>
-        <head-button innerText="АДМИНИСТРИРОВАНИЕ" menuId="#menu1"></head-button>
-        <head-button link=".section_footer" innerText="ПРОДВИЖЕНИЕ"></head-button>
-        <head-button link=".section_footer" innerText="РЕКЛАМА"></head-button>
-        <head-button innerText="О НАС" menuId="#menu2"></head-button>
-        <head-button link=".section_tariffs" innerText="ТАРИФЫ"></head-button>
-        <head-button link=".section_cases" innerText="ПРОЕКТЫ"></head-button>
-        <head-button link=".section_footer" innerText="КОНТАКТЫ"></head-button>
+<div id="render_head" class="w-full absolute top-0"></div>
+<div class="flex h-screen md:h-[650px]">
+  <div id="block1">
+    <div class="my-4 md:my-8">
 
-        <button-menu id="menu1" [menuSection]="['МИГРАЦИЯ', 'БЭКАПЫ', 'АУДИТ БЕЗОПАСНОСТИ', 'ОПТИМИЗАЦИЯ СКОРОСТИ', 'ПЕРЕЕЗД НА HTTPS']" [sectionLink]="['/', '/', '/', '/', '/']" #buttonMenu></button-menu>
-        <button-menu id="menu2" [menuSection]="['КОМАНДА', 'DRUPALGIVE', 'КУРСЫ DRUPAL', 'ВАКАНСИИ']" [sectionLink]="['/', '/', '/', '/']" #buttonMenu></button-menu>
-      </div>
-    </div>
-
-    <div id="container" class="z-1 flex flex-wrap items-center justify-center md:justify-start">
-      <div id="info" class="w-full text-center mb-8 md:w-1/3">
-        <h1 id="page-title" class="text-white font-bold text-4xl md:text-6xl">Поддержка <br> сайтов на Drupal</h1>
-        <div id="support-main-description" class="text-white font-medium text-lg mt-4">
-          Сопровождение и поддержка сайтов <br> на CMS Drupal любых версий и запущенности
-        </div>
-        <button (click)="showPopUp()" class="mt-8 px-4 py-2 border-2 border-icons-1 rounded">СВЯЗЬ С НАМИ</button>
-      </div>
-
-      <div class="grid grid-cols-2 md:grid-cols-3 2xl:gap-8 gap-x-[25%] 2xl:ml-[200px]">
-        <div class="h-32 mb-2">
-          <drupal-desc titleClass="one-place" titleText="#1" titleImgLink="/assets/img/cup.png" innerText="Drupal-разработчик <br> в России по версии <br> Рейтинга Рунета"></drupal-desc>
-        </div>
-        <div class="h-32 mb-2">
-          <drupal-desc titleClass="common" titleText="3+" innerText="средний опыт <br> специалистов более <br> 3 лет"></drupal-desc>
-        </div>
-        <div class="h-32 mb-2">
-          <drupal-desc titleClass="common" titleText="14" innerText="лет опыта в сфере <br> Drupal"></drupal-desc>
-        </div>
-        <div class="h-32 mb-2">
-          <drupal-desc titleClass="common" titleText="200+" innerText="модулей и тем <br> в формате DrupalGive"></drupal-desc>
-        </div>
-        <div class="h-32 mb-16">
-          <drupal-desc titleClass="common" titleText="35 000" innerText="часов поддержки <br> сайтов на Drupal"></drupal-desc>
-        </div>
-        <div class="h-32 mb-16">
-          <drupal-desc titleClass="common" titleText="200+" innerText="Проектов <br> на поддержке"></drupal-desc>
+      <div class="flex justify-center xl:ml-[0px] lg:ml-[10px] md:ml-[12px] sm:ml-[14px]">
+        <div id="container" class="z-1 md:justify-start">
+          <div class="justify-center">
+            <div class="md:h-32">
+              <div id="content" class="lg:flex items-center">
+                <img src="/assets/img/drupal-coder.svg" alt="Логотип" id="logo" class="w-auto h-8 mr-4">
+                <div>
+                  <head-button link=".section_support" innerText="ПОДДЕРЖКА DRUPAL"></head-button>
+                  <head-button innerText="АДМИНИСТРИРОВАНИЕ" menuId="#menu1"></head-button>
+                  <head-button link=".section_footer" innerText="ПРОДВИЖЕНИЕ"></head-button>
+                  <head-button link=".section_footer" innerText="РЕКЛАМА"></head-button>
+                  <head-button innerText="О НАС" menuId="#menu2"></head-button>
+                  <head-button link=".section_tariffs" innerText="ТАРИФЫ"></head-button>
+                  <head-button link=".section_cases" innerText="ПРОЕКТЫ"></head-button>
+                  <head-button link=".section_footer" innerText="КОНТАКТЫ"></head-button>
+                </div>
+                <button-menu id="menu1" [menuSection]="['МИГРАЦИЯ', 'БЭКАПЫ', 'АУДИТ БЕЗОПАСНОСТИ', 'ОПТИМИЗАЦИЯ СКОРОСТИ', 'ПЕРЕЕЗД НА HTTPS']" [sectionLink]="['/', '/', '/', '/', '/']" #buttonMenu></button-menu>
+                <button-menu id="menu2" [menuSection]="['КОМАНДА', 'DRUPALGIVE', 'КУРСЫ DRUPAL', 'ВАКАНСИИ']" [sectionLink]="['/', '/', '/', '/']" #buttonMenu></button-menu>
+              </div>
+            </div>
+          
+            <div class="md:flex">
+              <div id="info" class="w-full text-center mb-8 md:w-1/3">
+                <h1 id="page-title">Поддержка <br> сайтов на Drupal</h1>
+                <div id="support-main-description">
+                  Сопровождение и поддержка сайтов <br> на CMS Drupal любых версий и запущенности
+                </div>
+                <button (click)="showPopUp()">СВЯЗЬ С НАМИ</button>
+              </div>
+            
+              <div class="grid grid-cols-2 lg:grid-cols-3 transform md:translate-x-[210px]">
+                <div class="h-32 mb-2">
+                  <drupal-desc titleClass="one-place" titleText="#1" titleImgLink="/assets/img/cup.png" innerText="Drupal-разработчик <br> в России по версии <br> Рейтинга Рунета"></drupal-desc>
+                </div>
+                <div class="h-32 mb-2">
+                  <drupal-desc titleClass="common" titleText="3+" innerText="средний опыт <br> специалистов более <br> 3 лет"></drupal-desc>
+                </div>
+                <div class="h-32 mb-2">
+                  <drupal-desc titleClass="common" titleText="14" innerText="лет опыта в сфере <br> Drupal"></drupal-desc>
+                </div>
+                <div class="h-32 mb-2">
+                  <drupal-desc titleClass="common" titleText="200+" innerText="модулей и тем <br> в формате DrupalGive"></drupal-desc>
+                </div>
+                <div class="h-32 mb-16">
+                  <drupal-desc titleClass="common" titleText="35 000" innerText="часов поддержки <br> сайтов на Drupal"></drupal-desc>
+                </div>
+                <div class="h-32 mb-16">
+                  <drupal-desc titleClass="common" titleText="200+" innerText="Проектов <br> на поддержке"></drupal-desc>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
