--- a/src/app/components/site/info/info.component.css
+++ b/src/app/components/site/info/info.component.css
@@ -1,7 +1,8 @@
 #block2 {
   position: relative;
+  margin-top: 100px;
   margin-bottom: 110px;
-  margin-left:25px;
+  width: 100%;
 }
 
 #main_title {
@@ -33,7 +34,7 @@
   flex-shrink: 0;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 640px) {
   #main_title {
     font-size: 42px;
     width: 580px;
@@ -42,5 +43,4 @@
   #main_desc {
     width: 493px;
   }
-
 }
