--- a/src/app/components/site/support/support-block.component.css
+++ b/src/app/components/site/support/support-block.component.css
@@ -1,4 +1,4 @@
-#inner-block {
+#block {
     margin-left: 15px;
     margin-right: 15px;
 }
@@ -14,13 +14,7 @@
     background-position: bottom right;
     padding-left: 26px;
     padding-top: 27px;
-    margin-right: 5px;
-    margin-bottom: 5px;
-}
-
-#inner-block{
-    margin-right: 15px;
-    margin-left: 15px;
+    margin-bottom: 4px;
 }
 
 #titletext {
@@ -61,7 +55,7 @@ img {
     margin-bottom: 20px;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 640px) {
     #sblock {
         height: 292px;
     }
@@ -78,4 +72,8 @@ img {
     #innertext {
         width: 233px;
     }
-  }
+    #block {
+        margin-left: 2px;
+        margin-right: 2px;
+    }
+}
