--- a/src/app/components/site/support/support-block.component.html
+++ b/src/app/components/site/support/support-block.component.html
@@ -1,4 +1,4 @@
-<div id="inner-block">
+<div id="block">
     <div [style.background-image]="getImgUrl()" id="sblock">
         <div id="idtext"> {{ getId() }} </div>
         <div id="titletext"> {{ titleText }} </div>
