--- a/src/app/components/site/application/main.component.html
+++ b/src/app/components/site/application/main.component.html
@@ -11,9 +11,11 @@
 </section>
 
 
+<!--
 <section class="section_expertise">
     <app-expertise></app-expertise>
-</section>
+</section>-->
+
 
 <section class="section_tariffs">
     <app-tariffs></app-tariffs>
